# emoji-to-do

./: .env.example  .env.test  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
front/: .prettierrc.js  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  main.tsx
front/src/api/: client.ts
front/src/components/: AppHeader.tsx  Button.tsx  Layout.tsx  NavigationHeader.tsx  ToastProvider.tsx
front/src/hooks/: useReaction.ts  useTeam.ts  useUser.ts
front/src/routes/: GithubAuth.tsx  GithubAuthCallback.tsx  Sandbox.tsx  Settings.tsx  SlackAuth.tsx  SlackAuthCallback.tsx
front/src/types/: Reaction.ts  ReactionAssignee.ts  Team.ts  User.ts
migrations/: 20220618102336_create_slack_teams.sql  20220618102336_create_slack_teams.up.sql  20220618112746_create_reactions.down.sql  20220618112746_create_reactions.up.sql  20220709052721_create_users.down.sql  20220709052721_create_users.up.sql  20220807100455_add_github_installment_id_to_teams.down.sql  20220807100455_add_github_installment_id_to_teams.up.sql
src/: lib.rs  main.rs
src/entities/: mod.rs  prelude.rs  reaction.rs  reaction_assignee.rs  team.rs  user.rs
src/github/: mod.rs
src/handlers/: auth.rs  github_auth.rs  hello.rs  mod.rs  root.rs  slack_auth.rs  webhook.rs
src/models/: mod.rs  reaction.rs  reaction_assignee.rs  team.rs  user.rs
src/slack/: mod.rs
src/token/: mod.rs
static/templates/: index.html
tests/: api_reaction_assignees_test.rs  api_reactions_test.rs  api_team_test.rs  api_user_test.rs  auth.rs  auth_test.rs  hello.rs  hello_test.rs  test.rs
(+12 files in other folders)
