[package]
name = "emoji-to-do"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
handlebars = { version = "4.3.1", features = ["dir_source"] }
hmac = "0.12.1"
jwt = { version = "0.16.0", features = ["openssl"] }
log = "0.4.17"
oauth2 = "4.2.0"
openssl = "0.10.41"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["json"] }
sea-orm = { version = "0.9.1", features = ["debug-print", "sqlx-sqlite", "runtime-actix-rustls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-actix-rustls", "macros", "migrate"] }

